Fix: Standardise brainwave stats horizontal alignment to 20px

--- a/css/style.css
+++ b/css/style.css
@@ -2409,7 +2409,7 @@ section {
 .wave-entry[data-wave-style="brainwave"] .wave-stats {
     position: absolute;
     color: #bae6fd;
-    right: 50px;
+    right: 20px;
     bottom: 40px;
 }
 
